--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "proxy": "https://redbus-backend-jzz8.onrender.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +18,7 @@
     "react-native": "^0.73.1",
     "react-native-web": "^0.19.10",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
