--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,7 @@
   "private": true,
   "proxy": "https://redbus-backend-jzz8.onrender.com",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.0",
-    "jquery": "^3.7.1",
-    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -17,15 +12,13 @@
     "react-icons": "^4.12.0",
     "react-native": "^0.73.1",
     "react-native-web": "^0.19.10",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "^3.4.4",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.16.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -49,7 +42,14 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.1.0"
   },
   "rules": {
     "react-hooks/exhaustive-deps": [
